--- a/Swap/foundry.toml
+++ b/Swap/foundry.toml
@@ -11,7 +11,6 @@ verbosity = 4
 
 [rpc_endpoints]
 cronos = "https://gateway.nebkas.ro/"
-cronos_testnet = "https://cronos-testnet-3.crypto.org:8545/"
-goerli = "https://eth-goerli.g.alchemy.com/v2/${GOERLI_API_KEY}"
+cronos_testnet = "https://evm-t3.cronos.org"
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
